test/v3/fail/tuple_id01.v3
//@execute 0 = 0
component tuple_id01 {
	method main(arg: int) -> int {
		return id((0, 1)).0;
	}
	method id(a: (int, int)) -> (int, int) {
		return a;
	}
}
